--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h4 class="upTop">Our First Project</h4>
         <h1 class="downtown">Little Kemet</h1>
     </div>
-    <div class="sectionContainer2">
+    <div class="sectionContainer">
         <div class="textContainer">
             <img src="https://static.wixstatic.com/media/ead7da_fb731f7796ab4740bfbc241acc330381~mv2.png/v1/fill/w_1308,h_1010,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/ead7da_fb731f7796ab4740bfbc241acc330381~mv2.png"
                 alt="" class="arial-kemet">
