--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
             <div class="day" onclick="transferPic(eventHolder.saturday.image,eventHolder.saturday.title,eventHolder.saturday.description)">Satday</div>
             <div class="day" onclick="transferPic(eventHolder.sunday.image,eventHolder.sunday.title,eventHolder.sunday.description)">Sunday</div>
             <hr>
+            <div class="img_logo">
+                <img src="https://substackcdn.com/image/fetch/f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2Fce5dbe1d-5a31-4d18-8617-041a9e175c8e_800x600.gif" alt="" class="africaSm">
+            </div>
         </div>
     </div>
     <div class="eventLetter">
