--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   />
   <link
     rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=AbrilFatFace"
+    href="https://fonts.googleapis.com/css?family=Abril Fat-Face"
   />
   </head>
 
