--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <link rel="stylesheet" href="style.css" />
     <link
     rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Cinzel"
-  />
-  <link
-    rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=PermanentMarker-Regular"
   />
   <link
     rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Abril Fat-Face"
+    href="https://fonts.googleapis.com/css?family=Abril FatFace"
   />
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Cinzel"
+  />
+ 
   </head>
 
   <body>
