--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   />
   <link
     rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Abril FatFace"
+    href="https://fonts.googleapis.com/css?family=Abril Fatface"
   />
     <link
     rel="stylesheet"
