--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           alt=""
           class="mainLook"
         />
+        <button class="recruit">Become A Member</button>
       </div>
     </div>
 
