--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
     rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=PermanentMarker-Regular"
+    href="https://fonts.googleapis.com/css?family=Permanent Marker-Regular"
   />
   <link
     rel="stylesheet"
