--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   />
   <link
   rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=PermanentMarker"
+  href="https://fonts.googleapis.com/css?family=PermanentMarker-Regular"
 />
   <link rel="stylesheet" href="style.css" />
 
@@ -63,7 +63,7 @@
       alt=""
       class="mainSplash"
     />
-
+hi
     <div class="joinContainer">
       <div class="left">
         <h1 class="exposeTitle">Join The Movement</h1>
