--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
-  
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Abril Fatface"
-  />
+
     <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=PermanentMarker-Regular"
-  />
-  <link
-  rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Cinzel"
-/>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-  
-
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Abril Fatface"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=PermanentMarker-Regular"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Cinzel"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
@@ -102,6 +104,15 @@
       </div>
     </div>
 
+    <hr />
+
+    <div class="ourSolution">
+      
+      <div class="elevatorVid">
+        
+      </div>
+    </div>
+    <hr />
     <div class="seperator">
       <h4 class="upTop">Our First Project</h4>
       <h1 class="downtown">Little Kemet</h1>
@@ -220,9 +231,11 @@
       <h1 class="downtown">Event Calendar</h1>
     </div>
 
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script src="app.js" async defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
   </body>
 </html>
