--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
   <hr />
 
   <div class="ourSolution">
+    <h1 class="rise">Our World is in Our Hands </h1>
+    <img src="" alt="" class="riseKing">
+    <h1 class="rise">Together We Rise </h1>
 
+    <img src="https://images.unsplash.com/photo-1643660414189-c93e67ee757f?q=80&w=1664&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="blackface">
     <div class="elevatorVid">
 
     </div>
